...
          appBar: AppBar(
            backgroundColor: AppColours.white,
            scrolledUnderElevation: 0,
            centerTitle: false,
            titleSpacing: 20,
            title: Text(
              "Chats",
              style: AppTheme.headingThree.copyWith(
                fontStyle: FontStyle.normal,
              ),
            ),
            actionsPadding: const EdgeInsets.only(right: 20.0),
            actions: [
...
