...
            ),
            unselectedLabelStyle: AppTheme.simpleBodyText.copyWith(
              fontWeight: FontWeight.w400,
            ),
            tabs: const [
              Text(
                'Events',
              ),
              Text(
                'Explore',
              ),
            ],
          ),
        ),

        // body
...
