...
              onButtonPressed: () =>
                  context.pushNamed(GlintMainRoutes.filter.name),
            );
          }

          return CardSwiper(
            key: const ValueKey('people_card_swiper'),
            cardsCount: state.displayCards.length,
            initialIndex: state.currentIndex,
            showBackCardOnUndo: true,
            numberOfCardsDisplayed: remainingCards >= 2 ? 2 : 1,
            allowedSwipeDirection: const AllowedSwipeDirection.only(
              left: true,
...
